# phonix

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json
.github/workflows/: release.yml
installer/: phonix.iss
macos/: Info.plist  install.sh
scripts/: normalize_ui_ascii.ps1  normalize_ui_ascii.py
src/: app.rs  audio.rs  cleanup.rs  config.rs  hotkey.rs  main.rs  overlay.rs  paste.rs  server.rs  sound.rs  store.rs  update.rs  whisper.rs
whisper-server/: server.py  start.bat
